Build VGG16 transfer-learning model

--- a/notebooks/vgg16_hair_type_classification.ipynb
+++ b/notebooks/vgg16_hair_type_classification.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "f89b0457-d767-42aa-a8e3-b148ef360b33",
    "metadata": {},
    "outputs": [],
@@ -296,12 +296,13 @@
     "# image resizing\n",
     "IMG_WIDTH = 224\n",
     "IMG_HEIGHT = 224\n",
+    "IMG_CHANNELS = 3\n",
     "BATCH_SIZE = 32"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "b9ee62d5-9a49-4672-92ce-21e3118a79be",
    "metadata": {},
    "outputs": [
@@ -311,7 +312,7 @@
        "(987, 211, 212)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "id": "3b4c7a35-10d7-4846-ae7f-2060d04273c1",
    "metadata": {},
    "outputs": [],
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "938c730f-9a53-486f-8790-37694565040c",
    "metadata": {},
    "outputs": [],
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "id": "3cef0932-56fc-4342-bba0-9f7dc1c07199",
    "metadata": {},
    "outputs": [],
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "id": "947f7e7f-239b-412d-acda-a46a854a08fb",
    "metadata": {},
    "outputs": [],
@@ -403,6 +404,117 @@
    "metadata": {},
    "source": [
     "## Build VGG16 Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "cf1fe197-6f16-44c4-ad7c-50fb9f77395b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.applications import VGG16\n",
+    "from tensorflow.keras.layers import Dense, Dropout, GlobalAveragePooling2D\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "\n",
+    "base_model = VGG16(weights = \"imagenet\", include_top=False, input_shape=((IMG_WIDTH, IMG_HEIGHT, IMG_CHANNELS)))\n",
+    "\n",
+    "for layer in base_model.layers:\n",
+    "    layer.trainable = False\n",
+    "\n",
+    "# classifer head\n",
+    "x = base_model.output\n",
+    "x = GlobalAveragePooling2D()(x)\n",
+    "x = Dense(256, activation='relu')(x)\n",
+    "x = Dropout(0.4)(x)\n",
+    "x = Dense(64, activation='relu')(x)\n",
+    "x = Dropout(0.3)(x)\n",
+    "output = Dense(4, activation='softmax')(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a1e0b32e-1044-4d56-9017-09cb69cc75a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_4 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+      "                                                                 \n",
+      " block1_conv1 (Conv2D)       (None, 224, 224, 64)      1792      \n",
+      "                                                                 \n",
+      " block1_conv2 (Conv2D)       (None, 224, 224, 64)      36928     \n",
+      "                                                                 \n",
+      " block1_pool (MaxPooling2D)  (None, 112, 112, 64)      0         \n",
+      "                                                                 \n",
+      " block2_conv1 (Conv2D)       (None, 112, 112, 128)     73856     \n",
+      "                                                                 \n",
+      " block2_conv2 (Conv2D)       (None, 112, 112, 128)     147584    \n",
+      "                                                                 \n",
+      " block2_pool (MaxPooling2D)  (None, 56, 56, 128)       0         \n",
+      "                                                                 \n",
+      " block3_conv1 (Conv2D)       (None, 56, 56, 256)       295168    \n",
+      "                                                                 \n",
+      " block3_conv2 (Conv2D)       (None, 56, 56, 256)       590080    \n",
+      "                                                                 \n",
+      " block3_conv3 (Conv2D)       (None, 56, 56, 256)       590080    \n",
+      "                                                                 \n",
+      " block3_pool (MaxPooling2D)  (None, 28, 28, 256)       0         \n",
+      "                                                                 \n",
+      " block4_conv1 (Conv2D)       (None, 28, 28, 512)       1180160   \n",
+      "                                                                 \n",
+      " block4_conv2 (Conv2D)       (None, 28, 28, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_conv3 (Conv2D)       (None, 28, 28, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_pool (MaxPooling2D)  (None, 14, 14, 512)       0         \n",
+      "                                                                 \n",
+      " block5_conv1 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv2 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv3 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_pool (MaxPooling2D)  (None, 7, 7, 512)         0         \n",
+      "                                                                 \n",
+      " global_average_pooling2d_2   (None, 512)              0         \n",
+      " (GlobalAveragePooling2D)                                        \n",
+      "                                                                 \n",
+      " dense_6 (Dense)             (None, 256)               131328    \n",
+      "                                                                 \n",
+      " dropout_4 (Dropout)         (None, 256)               0         \n",
+      "                                                                 \n",
+      " dense_7 (Dense)             (None, 64)                16448     \n",
+      "                                                                 \n",
+      " dropout_5 (Dropout)         (None, 64)                0         \n",
+      "                                                                 \n",
+      " dense_8 (Dense)             (None, 4)                 260       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 14,862,724\n",
+      "Trainable params: 148,036\n",
+      "Non-trainable params: 14,714,688\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create model\n",
+    "model = Model(inputs=base_model.input, outputs=output)\n",
+    "\n",
+    "# compile model\n",
+    "model.compile(optimizer=Adam(learning_rate=-1e-4), loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"])\n",
+    "\n",
+    "# show summary\n",
+    "model.summary()"
    ]
   },
   {
